--- a/src/file.properties
+++ b/src/file.properties
@@ -75,12 +75,14 @@ fpRZ.filename=dat/RZ0010044010373296653X20141208095327.dat
 
 
 ##############################定义参数文件
+	##依循excel的列名，命名字段
 apitestcase0.excel=接口测试用例1
 apitestcase0.excel.filename=dat/接口测试用例.xls
 apitestcase0.excel.sheet=测试用例
 apitestcase0.excel.parameter=功能,用例,预期结果,请求方式,API,请求参数,抓取参数,抓取另命名,登录态账号
 
-apitestcase.excel=接口测试用例1
+	##自定义字段的命名方式，字段名字:列号
+apitestcase.excel=接口测试用例2
 apitestcase.excel.filename=dat/接口测试用例.xls
 apitestcase.excel.sheet=测试用例
 apitestcase.excel.parameter=casename:2,method:4,api:5,params:6,catchparams:7
@@ -91,12 +93,18 @@ foreseeapitestcase.excel.filename=dat/foreseeAPItestcase.xls
 foreseeapitestcase.excel.sheet=测试用例
 foreseeapitestcase.excel.parameter=casename:2,method:4,api:5,params:6,catchparams:7,saveparams:8,isenabled:10
 
+	##从excel获取Key=value模式的参数值
+foreseeapikeyvalue.excel=方欣接口测试参数
+foreseeapikeyvalue.excel.filename=dat/foreseeAPItestcase.xls
+foreseeapikeyvalue.excel.sheet=测试数据
+foreseeapikeyvalue.excel.parameter=KEYVALUE
 
 keyvalue.excel=测试参数
 keyvalue.excel.filename=dat/接口测试用例.xls
 keyvalue.excel.sheet=测试数据
 keyvalue.excel.parameter=KEYVALUE
 
+	##从文本文件获取表格字段，满足Loadrunner的参数文件格式
 textlist.csvtext=文本文件数据
 textlist.csvtext.filename=dat/fpsuper0.dat
 textlist.csvtext.parameter=DJXH,FPZL_DM,FP_DM,FS,FPQSHM,FPZT_DM
