加入Excel处理逻辑

--- a/src/file.properties
+++ b/src/file.properties
@@ -8,7 +8,8 @@
 #
 
 #####指定当前的 报文列表      #指定参数的默认值
-default=SWZJ.HXZG.SB.ZZSYBRSBSQJKJHQQCSJ,SWZJ.HXZG.SB.BCZZSXGMSB
+default=SWZJ.HXZG.YSH.TYSLJK
+#SWZJ.HXZG.SB.ZZSYBRSBSQJKJHQQCSJ,SWZJ.HXZG.SB.BCZZSXGMSB
 default.skssqq=2021-01-01
 default.skssqz=2021-01-31
 default.sbrq=2015-04-10
@@ -16,6 +17,78 @@ default.sbrq=2015-04-10
 
 
 #####以下定义XML文件名字以及参数列表
+
+#####  add by zp
+SWZJ.HXZG.YSH.TYSLJK=统一受理监控
+SWZJ.HXZG.YSH.TYSLJK.filename=dat/SWZJ.HXZG.YSH.TYSLJK-统一受理监控-reqquest.xml
+SWZJ.HXZG.YSH.TYSLJK.parameter=tran_seq,djxh,lcswsxDm,slswsxDm,skssqq:para_skssqq,skssqz:para_skssqz
+
+
+SWZJ.HXZG.DJ.BCBGSWJDBXXJYSJX=保存变更税务登记表信息和对相应的数据进行校验
+SWZJ.HXZG.DJ.BCBGSWJDBXXJYSJX.filename=dat/SWZJ.HXZG.DJ.BCBGSWJDBXXJYSJX-保存变更税务登记表信息和对相应的数据进行校验-request.xml
+SWZJ.HXZG.DJ.BCBGSWJDBXXJYSJX.parameter=tran_seq,djxh,skssqq:para_skssqq,skssqz:para_skssqz
+
+#SWZJ.HXZG.YSH.ProduceTYWSZG=生成文书字轨信息
+#SWZJ.HXZG.YSH.ProduceTYWSZG.filename=dat/SWZJ.HXZG.YSH.ProduceTYWSZG-生成文书字轨信息-request.xml
+#SWZJ.HXZG.YSH.ProduceTYWSZG.parameter=
+
+##需要考虑xgsjList参数含义
+SWZJ.ZGGZL.GGFW.JDXXCX=查询工作流第一个活动节点配置信息
+SWZJ.ZGGZL.GGFW.JDXXCX.filename=dat/SWZJ.ZGGZL.GGFW.JDXXCX-查询工作流第一个活动节点配置信息-request.xml
+SWZJ.ZGGZL.GGFW.JDXXCX.parameter=tran_seq,lcswsxDm,skssqq:para_skssqq,skssqz:para_skssqz
+
+#
+#SWZJ.HXZG.YSH.BCXXCJBSJ=外部数据保存主控服务
+#SWZJ.HXZG.YSH.BCXXCJBSJ.filename=dat/SWZJ.HXZG.YSH.BCXXCJBSJ-外部数据保存主控服务-request.xml
+#SWZJ.HXZG.YSH.BCXXCJBSJ.parameter=
+#
+#SWZJ.HXZG.FP.BCSWXZXKSBZS=名称暂未找到
+#SWZJ.HXZG.FP.BCSWXZXKSBZS.filename=dat/SWZJ.HXZG.FP.BCSWXZXKSBZS-request.xml
+#SWZJ.HXZG.FP.BCSWXZXKSBZS.parameter=
+#
+#SWZJ.HXZG.DJ.BCLSSWDJNSRSWDJXX=保存临时税务登记纳税人税务登记信息
+#SWZJ.HXZG.DJ.BCLSSWDJNSRSWDJXX.filename=dat/SWZJ.HXZG.DJ.BCLSSWDJNSRSWDJXX-保存临时税务登记纳税人税务登记信息-request.xml
+#SWZJ.HXZG.DJ.BCLSSWDJNSRSWDJXX.parameter=
+#
+#SWZJ.HXZG.SB.GETSBQXBYSBQXDM=根据申报期限代码获取申报期限
+#SWZJ.HXZG.SB.GETSBQXBYSBQXDM.filename=dat/SWZJ.HXZG.SB.GETSBQXBYSBQXDM-根据申报期限代码获取申报期限-request.xml
+#SWZJ.HXZG.SB.GETSBQXBYSBQXDM.parameter=tran_seq,djxh,sbqxDm,dqrq,zspmDm,zsxmDm,nsqxDm,skssqq:para_skssqq,skssqz:para_skssqz
+
+
+##保存和修改文化事业建设费登记表信息:参数较多
+SWZJ.HXZG.DJ.BCWHSYJSFDJBXX=保存和修改文化事业建设费登记表信息
+SWZJ.HXZG.DJ.BCWHSYJSFDJBXX.filename=dat/SWZJ.HXZG.DJ.BCWHSYJSFDJBXX-保存和修改文化事业建设费登记表信息-request.xml
+SWZJ.HXZG.DJ.BCWHSYJSFDJBXX.parameter=tran_seq,djxh,skssqq:para_skssqq,skssqz:para_skssqz
+
+SWZJ.HXZG.FP.CSHPZHDSQ=初始化发票票种核定申请业务
+SWZJ.HXZG.FP.CSHPZHDSQ.filename=dat/SWZJ.HXZG.FP.CSHPZHDSQ-初始化发票票种核定申请业务-request.xml
+SWZJ.HXZG.FP.CSHPZHDSQ.parameter=tran_seq,djxh,swjgDm,lcslid
+
+SWZJ.HXZG.DJ.CXHZNSQYXXBABXXBYDJXH=根据登记序号查询汇总纳税企业信息备案表信息
+SWZJ.HXZG.DJ.CXHZNSQYXXBABXXBYDJXH.filename=dat/SWZJ.HXZG.DJ.CXHZNSQYXXBABXXBYDJXH-根据登记序号查询汇总纳税企业信息备案表信息-request.xml
+SWZJ.HXZG.DJ.CXHZNSQYXXBABXXBYDJXH.parameter=tran_seq,djxh
+
+SWZJ.HXZG.DJ.CXNSRZDDZJGXXBYDJXH=根据登记序号查询纳税人最顶端总机构信息和上一级机构
+SWZJ.HXZG.DJ.CXNSRZDDZJGXXBYDJXH.filename=dat/SWZJ.HXZG.DJ.CXNSRZDDZJGXXBYDJXH-根据登记序号查询纳税人最顶端总机构信息和上一级机构-request.xml
+SWZJ.HXZG.DJ.CXNSRZDDZJGXXBYDJXH.parameter=tran_seq,djxh
+
+SWZJ.HXZG.DJ.CXNSRFZJGXXBYDJXH=根据登记序号查询分支机构信息
+SWZJ.HXZG.DJ.CXNSRFZJGXXBYDJXH.filename=dat/SWZJ.HXZG.DJ.CXNSRFZJGXXBYDJXH-根据登记序号查询分支机构信息-request.xml
+SWZJ.HXZG.DJ.CXNSRFZJGXXBYDJXH.parameter=tran_seq,djxh
+
+SWZJ.HXZG.DJ.CXHZNSQYXXBAXMBXX=根据登记序号查询分支机构信息
+SWZJ.HXZG.DJ.CXHZNSQYXXBAXMBXX.filename=/TestHX-Ejb/src/dat/SWZJ.HXZG.DJ.CXHZNSQYXXBAXMBXX-根据登记序号查询分支机构信息-request.xml
+SWZJ.HXZG.DJ.CXHZNSQYXXBAXMBXX.parameter=tran_seq,djxh,yxqq,yxqz
+
+SWZJ.HXZG.DJ.CXNSRCWKJZDBAXX=根据登记序号查询纳税人财务会计制度备案信息
+SWZJ.HXZG.DJ.CXNSRCWKJZDBAXX.filename=dat/SWZJ.HXZG.DJ.CXNSRCWKJZDBAXX-根据登记序号查询纳税人财务会计制度备案信息-request.xml
+SWZJ.HXZG.DJ.CXNSRCWKJZDBAXX.parameter=tran_seq,djxh
+
+
+
+
+#####  add  end  by zp
+
 
 SWZJ.HXZG.SB.ZZSXGMSBSQJKJHQQCSJ=增值税小规模申报事前监控及获取期初数据
 SWZJ.HXZG.SB.ZZSXGMSBSQJKJHQQCSJ.filename=dat/SWZJ.HXZG.SB.ZZSXGMSBSQJKJHQQCSJ-增值税小规模申报事前监控及获取期初数据-request.xml
@@ -73,6 +146,8 @@ fpRZ=*屏蔽的关键字*认证
 fpRZ.filename=dat/RZ0010044010373296653X20141208095327.dat
 
 
+callexcel.main=foreseeapitestcase.excel
+callexcel.keyvalue=foreseeapikeyvalue.excel
 
 ##############################定义参数文件
 	##依循excel的列名，命名字段
