--- a/src/ejbclient.properties
+++ b/src/ejbclient.properties
@@ -6,10 +6,11 @@ esb.ejbHome=gt3.esb.ejb.AipEJBAdapterXml
 
 
 osb.contextFactory=weblogic.jndi.WLInitialContextFactory
-osb.providerUrl=t3://10.10.0.89:8001
+osb.providerUrl=t3://10.10.0.89:7001
 osb.principal=
 osb.crenentials=
-osb.ejbHome=gt3.esb.ejb.AipEJBAdapter.NF.JEJB#gt3.esb.ejb.adapter.client.IEsbXmlMessageReceiver
+osb.ejbHome=vpnHxzg#gt3.esb.ejb.adapter.client.IEsbXmlMessageReceiver
+#osb.ejbHome=gt3.esb.ejb.AipEJBAdapter.NF.JEJB#gt3.esb.ejb.adapter.client.IEsbXmlMessageReceiver
 
 #oracle, css
-current.esb=css
+current.esb=oracle
